[gd_scene load_steps=4 format=2]

[ext_resource path="res://white_rect_1x1.png" type="Texture" id=1]
[ext_resource path="res://DraggableWindow.gd" type="Script" id=2]
[ext_resource path="res://Assets/icon_close.png" type="Texture" id=3]

[node name="DraggableWindow" type="TextureRect"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -1.7818
margin_right = 342.218
margin_bottom = 409.0
texture = ExtResource( 1 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -37.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = 37.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="." method="_on_DraggableWindow_gui_input"]
[connection signal="pressed" from="CloseButton" to="." method="_on_TextureButton_pressed"]
